Tested minify task and running multiple tasks.

--- a/frontend-dev/pre-artifacts/css/example-feature-2.css
+++ b/frontend-dev/pre-artifacts/css/example-feature-2.css
@@ -1,6 +1,6 @@
 /*!
  * Company Name http://www.company-website.com
- * .css 
+ * example-feature-2.css 0.0.0
  * {{hash goes here}}
  */
 .component-1 {
