Removed clean key from bundle yaml files (tempororarily) and modified bundle.wrangler.config.yaml to reflect some of changes in gulpw/default.wrangler.config.yaml.

--- a/frontend-dev/pre-artifacts/css/example-feature-1.css
+++ b/frontend-dev/pre-artifacts/css/example-feature-1.css
@@ -7,7 +7,7 @@ h1 {
     color: #FF0000;
 }
 h1 {
-    marmgin: 21px 0:
+    margin: 21px 0;
 }
 h1 {
     font-family: Georgia, Lucida Grande, Arial, Helvetica, Verdana, sans-serif;
