Added test files for 'mocha' task (along with a yaml file for them).

--- a/public/css/example-page-1.css
+++ b/public/css/example-page-1.css
@@ -1,2 +1,2 @@
-/*! Company Name http://www.company-website.com example-page-1.css 0.0.0 {{file hash here}} */
+/*! Company Name http://www.company-website.com Empty.css 0.0.0 {{file hash here}} */
 h1{color:red;margin:21px 0;font-family:Georgia,Lucida Grande,Arial,Helvetica,Verdana,sans-serif}.component-1{color:#000;background:#F90;border-radius:21px;padding:21px;margin:21px}.component-2{color:#000;background:#0F0;padding:21px;margin:21px}.component-3{color:#000;background:#039;border-radius:1000px;padding:21px;margin:21px}
