--- a/public/css/example-feature-1.css
+++ b/public/css/example-feature-1.css
@@ -1,2 +1,2 @@
-/*! Company Name http://www.company-website.com example-feature-1.css 0.0.0 {{file hash here}} */
+/*! Company Name http://www.company-website.com Empty.css 0.0.0 {{file hash here}} */
 h1{color:red;margin:21px 0;font-family:Georgia,Lucida Grande,Arial,Helvetica,Verdana,sans-serif}
